checkout to lastest tag

--- a/.github/workflows/make-arm-profiles.yml
+++ b/.github/workflows/make-arm-profiles.yml
@@ -22,6 +22,8 @@ jobs:
             sudo rm -r manjaro-arm-profiles
           fi
           git clone https://gitlab.manjaro.org/manjaro-arm/applications/arm-profiles.git manjaro-arm-profiles
+          cd manjaro-arm-profiles
+          git checkout tags/$(git describe --tags --abbrev=0)
       
       - name: Add and Remove in files
         shell: bash
